# bibloteca_project

./:   README.md  requirements.txt
bibloteca/: bibloteca.py  book_database.json  cli.py  config.py  database.py  library.db  main.py  model.py  openlib_api.py  requirements.txt  test.py
bibloteca/bibloteca_package/: README.md  pyproject.toml
bibloteca/bibloteca_package/bibloteca_package/: database.py  library.db  main.py
bibloteca/bibloteca_package/tests/: test_bibloteca_package.py
bibloteca/ss/: ###__init__.py  __main__.py  bibloteca.py  cli.py
tests/: test_bibloteca.py
