[tool.poetry]
name = "bibloteca_package"
version = "0.1.0"
description = ""
authors = ["hmekhjian <h.mekhjian@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
bibloteca_package = "bibloteca_package.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.1"
rich = "^12.4.4"
shellingham = "^1.4.0"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
